--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
 .idea/
 .terraform/
+stages/one/variables.tf
 .terraform.tfstate.lock.info
 terraform.tfstate
 terraform.tfstate.backup
 crash.log
 states/
 .DS_STORE
+aws_test.pem
+aws_test copy.pem
+aws_test2.pem
+stages/one/graph.png
+network.text
