--- a/stages/two/init.conf
+++ b/stages/two/init.conf
@@ -1,4 +1,5 @@
 #cloud-config
 
 runcmd:
-    - [ docker, pull, "mhaddon/airportdemo" ]
+  - [ docker, pull, "mhaddon/airportdemo" ]
+  - [ docker, run, "–restart=always", "--name=server",  "-p 8080:8082", "mhaddon/airportdemo", "-e SPRING_DATABASE_URL=${database_endpoint}" ]
