--- a/stages/one/init.conf
+++ b/stages/one/init.conf
@@ -7,9 +7,5 @@ packages:
   - mysql-client
 
 runcmd:
-  - [ "echo \"mysql -u ${database_username} -p${database_password} -h ${database_endpoint} -P ${database_port} ${database_name} < /tmp/database.sql\" >> /tmp/log"]
-  - [ touch, "test" ]
-  - [ touch, "test2" ]
-  - [ chmod, 400, "/tmp/aws_test.pem" ]
-  - [ mysql, "-u ${database_username}", "-p${database_password}", "-h ${database_endpoint}", "-P ${database_port}", "${database_name}", "< /tmp/database.sql"]
-
+  - 'chmod 400 /tmp/aws_test.pem'
+  - 'mysql -u "${database_username}" -p${database_password} -h "${database_endpoint}" -P ${database_port} ${database_name} < /tmp/database.sql'
