--- a/stages/two/init.conf
+++ b/stages/two/init.conf
@@ -1,5 +1,5 @@
 #cloud-config
 
 runcmd:
-  - [ docker, pull, "mhaddon/airportdemo" ]
-  - [ docker, run, "–restart=always", "--name=server",  "-p 8080:8082", "mhaddon/airportdemo", "-e SPRING_DATABASE_URL=${database_endpoint}" ]
+  - 'docker pull "mhaddon/airportdemo"'
+  - 'docker run –restart=always --name=server -p 8080:8082 "mhaddon/airportdemo" -e "SPRING_DATABASE_URL=${database_endpoint}"'
