--- a/stages/one/init.conf
+++ b/stages/one/init.conf
@@ -8,4 +8,5 @@ packages:
 
 runcmd:
   - 'chmod 400 /tmp/aws_test.pem'
+  - 'echo "mysql -u \"${database_username}\" -p${database_password} -h \"${database_endpoint}\" -P ${database_port} ${database_name} < /tmp/database.sql" >> /tmp/log'
   - 'mysql -u "${database_username}" -p${database_password} -h "${database_endpoint}" -P ${database_port} ${database_name} < /tmp/database.sql'
